# CMSIS-DSP

.github/workflows/: avh.yaml
AVH/: CMakeLists.txt  examples_test.py  requirements.txt
AVH/Corstone-300/: fvp_config.txt  uart.c
AVH/test_utils/: avh_client.py  avh_fast_models_instance.py
AVH/toolchain/: arm-none-eabi-gcc.cmake
AVH/utils/: avh_client.py  avh_fast_models_instance.py
Examples/ARM/arm_bayes_example/: CMakeLists.txt  arm_bayes_example_f32.c
Examples/ARM/arm_class_marks_example/: CMakeLists.txt  arm_class_marks_example_f32.c
Examples/cmake/: CMakeLists.txt
Examples/cmake/Corstone-300/: fvp_config.txt
Testing/Toolchain/: GCC.cmake
